<resources>
    <string name="app_name">MvpTaskk</string>
    <string name="saturday">Saturday :</string>
    <string name="sunday">Sunday :</string>
    <string name="monday">Monday :</string>
    <string name="tuesday">Tuesday :</string>
    <string name="wednesday">Wednesday :</string>
    <string name="thursday">Thursday :</string>
    <string name="friday">Friday :</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="write_your_notes">write your notes</string>
</resources>
