<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".mvp.features.testmvp.TestMvpActivity"
        android:orientation="vertical"
        android:background="@drawable/hfsahj"
        android:gravity="center">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txtNote"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="bold"/>

    </LinearLayout>




    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:id="@+id/txtSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textSize="20sp"
                android:textStyle="bold"/>


        <EditText
                android:id="@+id/edtNote1"
                android:layout_marginLeft="30dp"
                android:hint="@string/write_your_notes"
                android:textColorHint="#00000f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>




    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:id="@+id/txtSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/edtNote2"
                android:layout_marginLeft="30dp"
                android:hint="@string/write_your_notes"
                android:textColorHint="#00000f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:id="@+id/txtMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/edtNote3"
                android:layout_marginLeft="30dp"
                android:hint="@string/write_your_notes"
                android:textColorHint="#00000f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:id="@+id/txtTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/edtNote4"
                android:layout_marginLeft="30dp"
                android:hint="@string/write_your_notes"
                android:textColorHint="#00000f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:id="@+id/txtWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/edtNote5"
                android:layout_marginLeft="30dp"
                android:hint="@string/write_your_notes"
                android:textColorHint="#00000f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:id="@+id/txtThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/edtNote6"
                android:layout_marginLeft="30dp"
                android:hint="@string/write_your_notes"
                android:textColorHint="#00000f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:id="@+id/txtFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textSize="20sp"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/edtNote7"
                android:layout_marginLeft="30dp"
                android:hint="@string/write_your_notes"
                android:textColorHint="#00000f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>

